<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidStudents</string>
    <string name="add_student">Add Student</string>
    <string name="update_student">Update Student</string>
    <string name="name">Student Name</string>
    <string name="gpa">GPA</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="info">info</string>
    <string name="summary">summary</string>
    <string name="studentList">enter</string>
    <string name="welcome">Welcome to my student list app</string>
    <string name="exit">exit</string>
    <string name="help_menu">On the home page, click \"enter\" to view the student list.\n\n
    On the student list page, click the plus sign on the upper right corner to add a student.\n\n
    On the student list page, tap on a student to view the details of a student.\n\n
    On the student list page, long press on a student to delete the student. \n\n
    On the home page, click \"summary\" to view the summary statistics of the students.\n\n
    v1.0 by Polly Yim</string>
    <string name="highest_name">Highest GPA student\'s name:</string>
    <string name="highest_gpa">Highest GPA:</string>
    <string name="lowest_student_name">Lowest GPA student\'s name:</string>
    <string name="lowest_gpa">Lowest GPA:</string>
    <string name="num_students">Number of students:</string>
    <string name="average_gpa">Average GPA:</string>
    <string name="quit_question">Do you want to quit?</string>
    <string name="saved_message">Student saved</string>
    <string name="deleted_message">Student deleted</string>
    <string name="no_student_message">No student record</string>

</resources>